--- a/less/variables.less
+++ b/less/variables.less
@@ -342,7 +342,7 @@
 @time-slider-close-active-position: -28px 0;
 
 // Pane
-@pane-background : darken(@background, 5%);
+@pane-background : none;
 @pane-button-container-height: 37px;
 @pane-button-container-inner-height: 27px;
 @pane-button-container-padding: 5px 6px 0 23px;
